Bug 865567 - Remove small box with orange border flickering (on top) when swiping in Snapped View.r=mbrubeck
UltraBlame original commit: 3730657cc0dadedb7ff11b9a9949292c63b16077

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -683,6 +683,23 @@ rect
 important
 ;
 }
+#
+tabs
+-
+container
+[
+viewstate
+=
+"
+snapped
+"
+]
+{
+visibility
+:
+hidden
+;
+}
 -
 moz
 -
